load static files of index.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,8 @@
- body {
-  background-image: url("src/background.jpg");
+{% load static %}
+ 
+body {
+  #background-image: url("{% static 'src/background.jpg' %}");
+  background-image: url('../src/background.jpg');
 	background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
