--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@ Outre la création de cours à l'aide d'outils intégrés (ressources et activit
 			<div class="option col-md-4">
 		
 				<br>
-				<div class="center"><img src="src/khanacademy.png" style="margin-bottom:24px;" /> </div>
+				<div class="center"><img src="{% static 'src/khanacademy.png' %}" style="margin-bottom:24px;" /> </div>
 					<p>
 					Khan Academy est une association à but non lucratif fondée en 2008 par Salman Khan. Sur le principe de « fournir un enseignement de grande qualité à tous, partout », le site web publie en ligne un ensemble gratuit de plus de 2.200 mini-leçons, via des tutoriels vidéo stockés sur YouTube, abordant les mathématiques, l'informatique, l'histoire, la finance, la physique, la chimie, la biologie, l'astronomie, la musique, l'art pictural et l'économie. 
 					</p>
