--- a/templates/login.html
+++ b/templates/login.html
@@ -33,7 +33,7 @@
     <input type="text" name="fname" required><br><br>
     <input type="text" name="lname" required><br><br>
     <input type="text" name="lloc" required><br><br>
-    <input type="number" name="edat" required><br><br>
+    <input type="number" name="edat" min="4" max="90" value="4" required><br><br>
 
   </div>
   <div class="col-md-3"></div>
