--- a/templates/index.html
+++ b/templates/index.html
@@ -16,46 +16,54 @@
 
 	<body>
 		<div class="container">
+    <div class="test">
 				<br>
 		<h1 class="center" >Ressources hors ligne CCD</h1>
 		<p class="center" >Ici, nous vous listons toutes les ressources que vous pouvez utiliser sur un environnement hors ligne.</p>
-		
+		</div>
 				<br>
 		<div class="row">
-			<div class="option col-md-4">
-				<div class="center"><img src="{% static 'src/wikipedia.png' %}"  style="margin-bottom:8px;" /> </div>
-				<p>
+			<div class="col-md-4">
+			  <div class="option">
+				  <div class="center"><img src="{% static 'src/wikipedia.png' %}"  style="margin-bottom:8px;" /> </div>
+				  <div class="space"><p>
 					Wikipéda est une aencyclopédie universelle, collaborative et multilingu. L'encyclopédie est en libre accès, en lecture comme en écriture. Wikipédia est l'un des sites les plus fréquentés au monde, avec plus de 600 millions de visites quotidiennes. Il constitue le plus grand et le plus populaire des ouvrages de références générales d'Internet, avec un total de 160 millions de pages disponibles. 
-				</p>
-				<span class="goto "  onclick="location='http://wikipedia.ccd'"> allez sur Wikipéda </pan>
-			</div>
+				  </p></div>
+				  <span class="goto "  onclick="location='http://wikipedia.ccd'"> allez sur Wikipéda </span>
+		  </div>
+		</div>
 
-			<div class="option col-md-4">
-			<br>
-				<div class="center"><img src="{% static 'src/moodle.png' %}"  /> </div>
-				<br>
+		<div class="col-md-4">
+      <div class="option">
+		    <br>
+		    <div class="center"><img src="{% static 'src/moodle.png' %}"  /> </div>
+		    <br>
+        <div class="space">
 				<p>
 				Moodle est une plateforme d'apprentissage en ligne libre. Développée à partir de principes pédagogiques, elle permet de créer des communautés s'instruisant autour de contenus et d'activités. 
 
 Outre la création de cours à l'aide d'outils intégrés (ressources et activités) à l'usage des formateurs, Moodle offre des possibilités d'organisation des cours sous forme de filières (catégories et sous-catégories, cohortes…) qui lui donnent également des caractéristiques propres à la mise en place de dispositifs complets d'enseignement.
 
 
-				</p>
+				</p> </div>
 				<span class="goto "  onclick="location='http://moodle.ccd'"> allez sur Moodle </span>
 			</div>
+		</div>
 
 
-			<div class="option col-md-4">
+		<div class=" col-md-4">
+			<div class="option">
 		
 				<br>
 				<div class="center"><img src="{% static 'src/khanacademy.png' %}" style="margin-bottom:24px;" /> </div>
-					<p>
+			  <div class="space">	<p>
 					Khan Academy est une association à but non lucratif fondée en 2008 par Salman Khan. Sur le principe de « fournir un enseignement de grande qualité à tous, partout », le site web publie en ligne un ensemble gratuit de plus de 2.200 mini-leçons, via des tutoriels vidéo stockés sur YouTube, abordant les mathématiques, l'informatique, l'histoire, la finance, la physique, la chimie, la biologie, l'astronomie, la musique, l'art pictural et l'économie. 
-					</p>
+				</p> </div>
 				
 				<span class="goto " style="margin-top:34px;" onclick="location='http://khanacademy.ccd'"> allez sur Khan Academy </span>
 
 			</div>
+		</div>
 		</div>
 		</div>
 
