--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,20 @@ body {
   background-size: cover;
 }
 
+.test {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: white;
+  border-bottom: 2px solid grey;
+  border-left: 2px solid grey;
+  border-right: 2px solid grey;
+  border-bottom-left-radius: 25px;
+  opacity:0.8;
+  color: black;
+  border-bottom-right-radius: 25px;
+}
+
 .center {
 	display: block;
 	text-align: center;
@@ -16,8 +30,17 @@ body {
 
 div .option {
 	background-color: white;
-	opacity: 0.8;
 	border: 2px solid grey;
+  border-radius: 15px;
+  margin-left: 1px;
+  
+	margin-bottom: 10px;
+}
+
+.space {
+  margin-left: 30px;
+  margin-right: 30px;
+  text-align: justify;
 }
 
 .goto {
@@ -28,10 +51,13 @@ div .option {
 	background-color: green;
 	display: block;
 	margin: auto;
-	margin-bottom: 4px;
+	margin-bottom: 24px;
 	padding-top: 4px;
 	padding-bottom: 4px;
 	cursor: pointer;
+  max-width: 75%;
+  
+
 }
 
 .goto:hover {
