--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CCD Index</title>
+		<title>DKS Ressources</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 		
@@ -17,9 +17,9 @@
 	<body>
 		<div class="container">
     <div class="test">
-				<br>
-		<h1 class="center" >Ressources hors ligne CCD</h1>
+		<h1 class="center" >Ressources hors ligne DKS</h1>
 		<p class="center" >Ici, nous vous listons toutes les ressources que vous pouvez utiliser sur un environnement hors ligne.</p>
+				<br>
 		</div>
 				<br>
 		<div class="row">
