--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,20 +12,48 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: white;
-  border-bottom: 2px solid grey;
-  border-left: 2px solid grey;
-  border-right: 2px solid grey;
+  background-color: grey;
+  border-bottom: 2px solid #646464;
+  border-left: 2px solid #646464;
+  border-right: 2px solid #646464;
   border-bottom-left-radius: 25px;
-  opacity:0.8;
   color: black;
   border-bottom-right-radius: 25px;
+font-family: "Comic Sans MS", sans-serif;
+}
+.test2 {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: grey;
+  border-bottom: 2px solid #646464;
+  color: black;
+  font-family: "Comic Sans MS", sans-serif;
 }
 
+.bfont {
+
+  font-family: "Comic Sans MS", sans-serif;
+}
 .center {
 	display: block;
 	text-align: center;
 	margin: auto;
+}
+
+.justified {
+  text-align: center;
+
+}
+
+.left {
+  text-align: justify;
+  margin-left: 10px;
+}
+
+.login {
+  margin-left: 30%;
+  margin-right: 30%;
 }
 
 div .option {
