--- a/templates/login.html
+++ b/templates/login.html
@@ -34,10 +34,15 @@
      <div class="col-sm-12"><br></div>
     <div class="col-md-4 bfont">Prénom:</div>     <div class="col-md-6"> <input type="text" name="lname" required></div>
      <div class="col-sm-12"><br></div>
-    <div class="col-md-4  bfont">Lieu d'origine:</div>    <div class="col-md-6"> <input type="text" name="lloc" required></div>
+    <div class="col-md-4  bfont">Lieu de naissance:</div>    <div class="col-md-6"> <input type="text" name="lloc" required></div>    
+     <div class="col-sm-12"><br></div>
+    <div class="col-md-4  bfont">Lieu de résidence:</div>    <div class="col-md-6"> <input type="text" name="lloc" required></div>
      <div class="col-sm-12"><br></div>
     <div class="col-md-4 bfont">L'âge:</div>    <div class="col-md-6"><input type="number" name="edat" min="4" max="90" value="4" required></div>
      <div class="col-sm-12"><br></div>
+    <div class="col-md-4 bfont">Email (non requis):</div>    <div class="col-md-6"><input type="number" name="edat" min="4" max="90" value="4"></div>
+     <div class="col-sm-12"><br></div>
+
 
   </div>
   <input class="btn btn-primary" type="submit" value="Envoyer">
