--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Login Portal</title>
+	<title>Téléchargement des données</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -43,84 +43,12 @@
 jasjf sjf sdkjf slfj lsdfmlm f. fsf fjklsj f.
 sadfsdfasdf  df f f 
           </div>
+          <div>      </div>
+          <div class="option">
+            Hola que tal
+          </div>
         </div>
       </div>
-
-			<div class="wrap-login100 p-l-50 p-r-50 p-t-72 p-b-50">
-				<form class="login100-form validate-form" action"/login" method="post"> {% csrf_token %}  
-					<span class="login100-form-title p-b-59">
-						Accéder au réseau:
-					</span>
-
-					<div class="wrap-input100 validate-input" data-validate="Name is required">
-						<span class="label-input100">Nom</span>
-						<input class="input100" type="text" name="fname" placeholder="Nom..." required>
-						<span class="focus-input100"></span>
-					</div>
-
-					<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-						<span class="label-input100">Prénom</span>
-						<input class="input100" type="text" name="lname" placeholder="Prénom..." required>
-						<span class="focus-input100"></span>
-					</div>
-
-					<div class="wrap-input100 validate-input" data-validate="Username is required">
-						<span class="label-input100">Lieu de naissance</span>
-						<input class="input100" type="text" name="lloc_n" placeholder="Lieu de naissance..." required>
-						<span class="focus-input100"></span>
-					</div>
-
-					<div class="wrap-input100 validate-input" data-validate = "Password is required">
-						<span class="label-input100">Lieu de résidence</span>
-						<input class="input100" type="text" name="lloc_r" placeholder="Lieu de résidence... " required>
-						<span class="focus-input100"></span>
-					</div>
-
-					<div class="wrap-input100 validate-input" data-validate = "Repeat Password is required">
-						<span class="label-input100">L'âge</span>
-						<input class="input100" type="number" name="edat" min="4" max="90" placeholder="4" required>
-						<span class="focus-input100"></span>
-					</div>
-
-
-
-
-					<div class="wrap-input100 validate-input" data-validate = "Password is required">
-						<span class="label-input100">Email</span>
-						<input class="input100" type="text" name="lloc_r" placeholder="L'adresse électronique... " >
-						<span class="focus-input100"></span>
-					</div>
-
-
-
-					<div class="flex-m w-full p-b-33">
-						<div class="contact100-form-checkbox">
-							<input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me" required>
-							<label class="label-checkbox100" for="ckb1">
-								<span class="txt1">
-									je suis d'accord avec le
-									<a href="#" class="txt2 hov1">
-										Conditions d'utilisation
-									</a>
-								</span>
-							</label>
-						</div>
-
-						
-					</div>
-
-					<div class="container-login100-form-btn">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<button class="login100-form-btn">
-								Envoyer
-							</button>
-						</div>
-
-						</a>
-					</div>
-				</form>
-			</div>
 		</div>
 	</div>
 	
