--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,13 +1,81 @@
 {% load static %}
  
-body {
-  #background-image: url("{% static 'src/background.jpg' %}");
-  background-image: url('../src/background.jpg');
-	background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+/*  body {
+/*  #background-image: url("{% static 'src/background.jpg' %}");
+/*  background-image: url('../src/background.jpg');
+/*	background-repeat: no-repeat;
+/*  background-attachment: fixed;
+/*  background-size: cover;
+/*}
+ 
+
+/*------------------------------------------------------------------
+[ Login100 more ]*/
+
+
+html, body {
+  height: 100%;
+  margin: 0;
+  top: 0;
 }
 
+.login100-more {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100%;
+  top: 0;
+  margin: 0;
+  position: relative;
+  z-index: 1;
+}
+
+
+.login100-more::before {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #e8519e;
+  background: -webkit-linear-gradient(bottom, #454545, #000000);
+  background: -o-linear-gradient(bottom, #454545, #000000);
+  background: -moz-linear-gradient(bottom, #454545, #000000);
+  background: linear-gradient(bottom, #454545, #000000);
+  opacity: 0.8;
+}
+
+.titol {
+  font-family: "Comic Sans MS", sans-serif;
+  font-size: 20px;
+  padding-left:25px;
+  padding-right:25px;
+  padding-top:20px;
+}
+.caixa {
+ background-color: white;
+ color: black;
+ border: solid 2px grey;
+ text-align: center;
+ border-radius: 6px;
+ font-family: "Comic Sans MS", sans-serif;
+}
+
+
+.center {
+	display: block;
+  vertical-align: middle;
+	text-align: center;
+	margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/*==================================================================
 .test {
   margin: 0;
   padding: 0;
