canvi backend login i test

--- a/templates/login.html
+++ b/templates/login.html
@@ -87,7 +87,7 @@ sadfsdfasdf  df f f
 
 					<div class="wrap-input100 validate-input" data-validate = "Password is required">
 						<span class="label-input100">Email</span>
-						<input class="input100" type="text" name="lloc_r" placeholder="L'adresse électronique... " >
+						<input class="input100" type="text" name="email" placeholder="L'adresse électronique... " >
 						<span class="focus-input100"></span>
 					</div>
 
@@ -95,7 +95,7 @@ sadfsdfasdf  df f f
 
 					<div class="flex-m w-full p-b-33">
 						<div class="contact100-form-checkbox">
-							<input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me" required>
+							<input class="input-checkbox100" id="ckb1" type="checkbox" name="policy" required>
 							<label class="label-checkbox100" for="ckb1">
 								<span class="txt1">
 									je suis d'accord avec le
