dedicat a que en jordi pugui fer el frontend

--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -26,10 +26,25 @@
           <button class="btn btn-success end" type="submit" form="form1" value="Submit">Téléchargez</button>
         </div>
       </form>
- 
+      </div>
+      <div class="caixa" style="margin-top: 10%">
+      <form action="/retrieve" method="get" id="form1">
+        <div class="titol">
+          <strong> Formulaire de téléchargement de données Dunia Kato Sénégal</strong>
+        </div>
+        <div >
+          <p>Les données après la date indiquées sont téléchargées.</p>
+          </div>
+        <div class="center" style="padding-bottom: 20px">
+          <input style="float: left; margin-right: 5px;" type="date" name="date" required/>
+          <input style="float: left; margin-right: 5px;" type="date" name="date" required/>
+          <input style="float: left; margin-right: 5px;" type="date" name="date" required/>
+          <button class="btn btn-success end" type="submit" form="form1" value="Submit">Téléchargez</button>
+        </div>
+      </form>
+      </div>
     </div>
-    </div>
-	
+	</div>
 
 </body>
 </html>
