--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,7 +26,9 @@ html, body {
   height: 100%;
   top: 0;
   margin: 0;
-  position: relative;
+  width: 100%;
+  height: 100%;
+  position: fixed;
   z-index: 1;
 }
 
@@ -64,6 +66,9 @@ html, body {
  font-family: "Comic Sans MS", sans-serif;
 }
 
+.tarja {
+  padding-top: 15px;
+}
 
 .center {
 	display: block;
