--- a/templates/index.html
+++ b/templates/index.html
@@ -14,39 +14,40 @@
 	
 	</head>
 
-	<body>
-		<div class="container">
-    <div class="test">
-		<h1 class="center" >Ressources hors ligne DKS</h1>
-		<p class="center" >Ici, nous vous listons toutes les ressources que vous pouvez utiliser sur un environnement hors ligne.</p>
+  <body style="background-image: url('../static/src/background.jpg'); overflow-y: auto; background-repeat: no-repeat; background-position: center; background-size: cover;">
+	
+        <div class="test">
+		      <h1 class="center"  >Ressources hors ligne DKS</h1>
+		      <p class="center" >Ici, nous vous laissons toutes les ressources que vous pouvez utiliser sur un environnement hors ligne.</p>
+				  <br>
+		    </div>
+		  <div class="container" >
 				<br>
-		</div>
-				<br>
-		<div class="row">
-			<div class="col-md-4">
-			  <div class="option">
-				  <div class="center"><img src="{% static 'src/wikipedia.png' %}"  style="margin-bottom:8px;" /> </div>
-				  <div class="space"><p>
+		      <div class="row">
+			      <div class="col-md-4">
+			        <div class="option">
+				        <div class="center"><img src="{% static 'src/wikipedia.png' %}"  style="margin-bottom:8px;" /> </div>
+				        <div class="space"><p>
 					Wikipéda est une aencyclopédie universelle, collaborative et multilingu. L'encyclopédie est en libre accès, en lecture comme en écriture. Wikipédia est l'un des sites les plus fréquentés au monde, avec plus de 600 millions de visites quotidiennes. Il constitue le plus grand et le plus populaire des ouvrages de références générales d'Internet, avec un total de 160 millions de pages disponibles. 
-				  </p></div>
-				  <span class="goto "  onclick="location='http://wikipedia.ccd'"> allez sur Wikipéda </span>
-		  </div>
-		</div>
+				         </p></div>
+				        <button class="btn btn-success goto"  onclick="window.location.href='/wikipedia'"> allez sur Wikipéda </button>
+		          </div>
+		        </div>
 
-		<div class="col-md-4">
-      <div class="option">
+		      <div class="col-md-4">
+        <div class="option">
 		    <br>
-		    <div class="center"><img src="{% static 'src/moodle.png' %}"  /> </div>
-		    <br>
-        <div class="space">
-				<p>
+		      <div class="center"><img src="{% static 'src/moodle.png' %}"  /> </div>
+		      <br>
+          <div class="space">
+				  <p>
 				Moodle est une plateforme d'apprentissage en ligne libre. Développée à partir de principes pédagogiques, elle permet de créer des communautés s'instruisant autour de contenus et d'activités. 
 
 Outre la création de cours à l'aide d'outils intégrés (ressources et activités) à l'usage des formateurs, Moodle offre des possibilités d'organisation des cours sous forme de filières (catégories et sous-catégories, cohortes…) qui lui donnent également des caractéristiques propres à la mise en place de dispositifs complets d'enseignement.
 
 
 				</p> </div>
-				<span class="goto "  onclick="location='http://moodle.ccd'"> allez sur Moodle </span>
+				<button class="btn btn-success goto "  onclick="window.location.href='/moodle'"> allez sur Moodle </button>
 			</div>
 		</div>
 
@@ -60,13 +61,11 @@ Outre la création de cours à l'aide d'outils intégrés (ressources et activit
 					Khan Academy est une association à but non lucratif fondée en 2008 par Salman Khan. Sur le principe de « fournir un enseignement de grande qualité à tous, partout », le site web publie en ligne un ensemble gratuit de plus de 2.200 mini-leçons, via des tutoriels vidéo stockés sur YouTube, abordant les mathématiques, l'informatique, l'histoire, la finance, la physique, la chimie, la biologie, l'astronomie, la musique, l'art pictural et l'économie. 
 				</p> </div>
 				
-				<span class="goto " style="margin-top:34px;" onclick="location='http://khanacademy.ccd'"> allez sur Khan Academy </span>
+				<button class="btn btn-success goto" style="margin-top:34px;" onclick="window.location.href='/khanacademy'"> allez sur Khan Academy </button>
 
 			</div>
 		</div>
 		</div>
-		</div>
-
 
 	</body>
 </html> 
