--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,33 +13,32 @@
 [ Login100 more ]*/
 
 
-html, body {
-  height: 100%;
-  margin: 0;
+ body {
+  margin: 0px !important;
   top: 0;
+  padding: 0px;
 }
 
 .login100-more {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 100%;
   top: 0;
   margin: 0;
   width: 100%;
   height: 100%;
   position: fixed;
   z-index: 1;
+
 }
 
 
 .login100-more::before {
   content: "";
-  display: block;
   position: absolute;
   z-index: -1;
   width: 100%;
-  height: 100%;
+  min-height: 110%;
   top: 0;
   left: 0;
   background: #e8519e;
@@ -50,7 +49,7 @@ html, body {
   opacity: 0.8;
 }
 
-.titol {
+.titol, .test {
   font-family: "Comic Sans MS", sans-serif;
   font-size: 20px;
   padding-left:25px;
@@ -80,6 +79,36 @@ html, body {
   align-items: center;
 }
 
+.space {
+  margin-left: 30px;
+  margin-right: 30px;
+  text-align: justify;
+}
+
+.option {
+
+  border: 1px solid grey;
+  border-radius: 16px;
+  background-color: white;
+  margin-bottom: 5%;
+}
+
+.goto {
+  margin-left: 10%;
+  margin-bottom: 5%;
+   
+}
+.container {
+  margin: 0;
+  margin-left: 0;
+}
+
+.header, .test {
+  padding: 10px;
+  text-align: center;
+  background: #28a745;
+  color: white;
+}
 /*==================================================================
 .test {
   margin: 0;
