--- a/templates/login.html
+++ b/templates/login.html
@@ -116,6 +116,9 @@ sadfsdfasdf  df f f
 								Envoyer
 							</button>
 						</div>
+<a href="/statistics" class="dis-block txt3 hov1 p-r-30 p-t-10 p-b-10 p-l-30    ">
+     Admin
+      <i class="fa fa-long-arrow-right m-l-5"></i>
 
 						</a>
 					</div>
